--- a/Markdown/DP_001_01背包.md
+++ b/Markdown/DP_001_01背包.md
@@ -1,10 +1,13 @@
+## 01 背包问题
+
 `dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - weight[i]] + value[i]);`
 `dp[j] = max(dp[j], dp[j - value[i]] + weight[i]);`
 
+![01背包题面png](https://cdn.acwing.com/media/article/image/2021/08/10/101476_4625b7eaf9-01背包题面.png) 
 
 [模板题链接](https://www.acwing.com/problem/content/2/) 
 
-![01背包题面png](https://cdn.acwing.com/media/article/image/2021/08/10/101476_4625b7eaf9-01背包题面.png) 
+画图列举一下相关信息
 
 ![01背包DP分析.png](https://cdn.acwing.com/media/article/image/2021/08/11/101476_9478d007fa-01背包DP分析.png) 
 
@@ -41,7 +44,7 @@ int main() {
 }
 ```
 
-## 如何转换为一维数组：
+## 关于如何转换为一维数组：
 
 f[i] 只用到了 f[i - 1] 这一层，所以可以用滚动数组来做
 
@@ -74,7 +77,7 @@ f[i] 只用到了 f[i - 1] 这一层，所以可以用滚动数组来做
     }
 ```
 
-三：把状态计算也用一维数组表示出来
+**三：把状态计算也用一维数组表示出来**
 
 ``` cpp 
 for (int i = 1; i <= n; i++){
@@ -96,7 +99,7 @@ for (int i = 1; i <= n; i++){
 }
 ```
 
-AC 代码：
+最终 01 背包 AC 代码：
 
 ``` cpp 
 #include <iostream>
