--- a/Markdown/DP_003_多重背包.md
+++ b/Markdown/DP_003_多重背包.md
@@ -4,7 +4,7 @@
 
 ## 多重背包 DP 分析
 
-![多重背包 DP 分析。png](https://cdn.acwing.com/media/article/image/2021/08/11/101476_aa17c55cfa-多重背包DP-分析.png) 
+![多重背包 DP 分析.png](https://cdn.acwing.com/media/article/image/2021/08/11/101476_aa17c55cfa-多重背包DP-分析.png) 
 
 ## 多重背包暴力解法：
 
