--- a/Markdown/DP_002_完全背包.md
+++ b/Markdown/DP_002_完全背包.md
@@ -44,7 +44,7 @@ int main() {
 
 ![完全背包一维数组转换01.png](https://cdn.acwing.com/media/article/image/2021/08/11/101476_84209426fa-完全背包一维数组转换01.png) 
 
-所以状态表示可以优化为： `f[i][j] = max (f[i - 1][j], f[i][j - v[i]] + w[i])`
+所以状态表示可以优化为： `f[i][j] = max (f[i - 1][j], f[i][j - v[i]] + w[i])`  
 
 这样的话就优化掉了 k 这一个维度
 
@@ -80,10 +80,10 @@ int main() {
 
 对比 01 背包的状态计算：
 
-01 背包为：`f[i][j] = max(f[i - 1][j], f[i - 1][j - v[i]] + w[i]);`
+01 背包为：`f[i][j] = max(f[i - 1][j], f[i - 1][j - v[i]] + w[i]);`    
 完全背包为：`f[i][j] = max(f[i - 1][j], f[i][j - v[i] + w[i])`
 
-所以可以优化为 01 背包类似的一维写法
+所以可以优化为 01 背包类似的一维写法（相比于 01 背包不逆序遍历即可）
 
 
 ``` cpp
