最长上升子序列纠错+更新代码

--- a/Markdown/DP_006最长上升子序列.md
+++ b/Markdown/DP_006最长上升子序列.md
@@ -2,11 +2,43 @@
 
 ![最长上升子序列题面01.png](https://cdn.acwing.com/media/article/image/2021/08/13/101476_68f5dae5fc-最长上升子序列题面01.png) 
 
+## 最长连续上升子序列 DP 分析
+
+![最长连续上升子序列DP分析01.png](https://cdn.acwing.com/media/article/image/2021/08/18/101476_5ac4f11200-最长连续上升子序列DP分析01.png) 
+
+先来看最长**连续**上升子序列 DP 分析 (注意下面这一个是连续的 DP 分析)
+
+``` cpp
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 1010;
+
+int n;
+int a[N], f[N];
+// 输出严格单调递增的  连续   子序列的长度
+
+int main() {
+    cin >> n;
+    for (int i = 0; i < n; i++) cin >> a[i];
+
+    f[0] = 1;
+    for (int i = 1; i < n; i++) {
+        if (a[i] > a[i - 1]) {
+            cout << a[i]  << ' ' << a[i + 1] << endl;
+            f[i] = f[i - 1] + 1;
+        } else {
+            f[i] = f[i - 1];
+        }
+    }
+    cout << f[n - 1] << endl;
+}
+```
 ## 最长上升子序列 DP 分析
 
-![最长上升子序列DP分析01.png](https://cdn.acwing.com/media/article/image/2021/08/13/101476_aece0217fc-最长上升子序列DP分析01.png) 
-
-## AC 代码
+![最长上升子序列DP分析01.png](https://cdn.acwing.com/media/article/image/2021/08/18/101476_65f65c8a00-最长上升子序列DP分析01.png) 
 
 ``` cpp
 #include <iostream>
@@ -20,21 +52,20 @@ int n;
 int a[N], f[N];
 
 int main() {
-    scanf("%d", &n);
-    for (int i = 1; i <= n; i++) scanf("%d", &a[i]);
-
+    cin >> n;
+    for (int i = 1; i <= n; i++) cin >> a[i];
     for (int i = 1; i <= n; i++) {
-        f[i] = 1; // 只有a[i]一个数
-        for (int j = 1; j < i; j++)
-            if (a[j] < a[i])
+        f[i] = 1; // f[i] 最短长度为 1
+        for (int j = 1; j <= i; j++) {
+            if (a[j] < a[i]) {
+                // 考虑前面 i - 1 种情况的最大值
                 f[i] = max(f[i], f[j] + 1);
+            }
+        }
     }
-
-    int res = 0;
-    for (int i = 1; i <= n; i++) res = max(res, f[i]);
-
-    printf("%d\n", res);
-
+    int ans = 0;
+    for (int i = 1; i <= n; i++) ans = max(ans, f[i]);
+    cout << ans << endl;
     return 0;
 }
 ```
