数字三角形更新代码

--- a/Markdown/DP_005_数字三角形.md
+++ b/Markdown/DP_005_数字三角形.md
@@ -18,28 +18,36 @@ const int N = 510, INF = 1e9;
 
 int n;
 int a[N][N];
-int f[N][N];
+int f[N][N]; // 代表从顶点到 ij 坐标的最大路径数值
 
 int main() {
-    scanf("%d", &n);
-    for (int i = 1; i <= n; i++)
-        for (int j = 1; j <= i; j++)
-            scanf("%d", &a[i][j]);
+    cin >> n;
+    for (int i = 1; i <= n; i++) {
+        for (int j = 1; j <= i; j++) {
+            cin >> a[i][j];
+        }
+    }
 
-    for (int i = 0; i <= n; i++)
-        for (int j = 0; j <= i + 1; j++)
-            // 注意初始化的时候这里要多加一个，因为边界求路径的时候会用到
-            f[i][j] = -INF;
+    for (int i = 0; i <= n; i++) {
+        for (int j = 0; j <= i + 1; j++) {
+            f[i][j] = -INF; 
+            // 这里要多初始化一项，由于求最大值，所以初始为最小值
+        }
+    }
 
     f[1][1] = a[1][1];
-    for (int i = 2; i <= n; i++)
-        for (int j = 1; j <= i; j++)
-            f[i][j] = max(f[i - 1][j - 1] + a[i][j], f[i - 1][j] + a[i][j]);
+    // 初始化目标数组的第一项，然后从 2 开始
+    for (int i = 2; i <= n; i++) {
+        for (int j = 1; j <= i; j++) {
+            f[i][j] = f[i - 1][j - 1] + a[i][j];
+            f[i][j] = max(f[i][j], f[i - 1][j] + a[i][j]);
+        }
+    }
 
-    int res = -INF;
-    for (int i = 1; i <= n; i++) res = max(res, f[n][i]);
-
-    printf("%d\n", res);
+    int ans = -INF;
+    for (int i = 1; i <= n; i++) ans = max(ans, f[n][i]); 
+    // 遍历最后一层，找出从第一层到最后一层的最大路径值
+    cout << ans << endl;
     return 0;
 }
 ```
