最长公共子序列更新代码

--- a/Markdown/DP_007最长公共子序列.md
+++ b/Markdown/DP_007最长公共子序列.md
@@ -20,18 +20,20 @@ char a[N], b[N];
 int f[N][N];
 
 int main() {
-    scanf("%d%d", &n, &m);
-    scanf("%s%s", a + 1, b + 1);
-
-    for (int i = 1; i <= n; i++)
+    cin >> n >> m;
+    scanf("%s%s", a + 1, b + 1); // 空出一位用来读字符串的独特写法
+    
+    // f[i][j] 第一个序列中前 i 个 第二个序列中 前 j 个 出现的公共子序列
+    for (int i = 1; i <= n; i++) {
         for (int j = 1; j <= m; j++) {
+            // 四种情况，省略一种
             f[i][j] = max(f[i - 1][j], f[i][j - 1]);
-            if (a[i] == b[j]) 
+            if (a[i] == b[j]) {
                 f[i][j] = f[i - 1][j - 1] + 1;
+            }
         }
-
-    printf("%d\n", f[n][m]);
-
+    }
+    cout << f[n][m] << endl;
     return 0;
 }
 ```
