动态规划目录调整，珍惜你剩下的生命

--- a/算法笔记/02_动态规划/DP_003_背包问题_02_完全背包.md
+++ b/算法笔记/02_动态规划/DP_003_背包问题_02_完全背包.md
@@ -34,6 +34,7 @@ int main() {
             }
         }
     }
+    
     cout << f[n][m] << endl;
 }
 ```
@@ -113,5 +114,4 @@ int main() {
 }
 ```
 
-最后发现完全背包相比于 01 背包只是 for 循环的前后顺序不一样
-
+最后发现完全背包相比于 01 背包只是 for 循环的前后顺序不一样, 在空间优化到一维之后，只有完全背包的 for 循环是顺序遍历的，其余背包在一维遍历的时候都是逆序遍历
