--- a/ACwing/算法基础课题单/数学知识/05约数个数.md
+++ b/ACwing/算法基础课题单/数学知识/05约数个数.md
@@ -1,4 +1,4 @@
-int 范围内， 约数个数最多的数大概是 1500 个 
+int 范围内，约数个数最多的的约数总数量大概是 1500 个 
 
 约数个数推导：
 
@@ -8,34 +8,38 @@ int 范围内， 约数个数最多的数大概是 1500 个
 
 
 ``` cpp 
- #include <iostream>
- #include <algorithm>
- #include <unordered_map>
- #include <vector>
+#include <iostream>
+#include <unordered_map>
 
- using namespace std;
+using namespace std;
 
- typedef long long LL;
- const int N = 110, mod = 1e9 + 7;
+typedef long long LL;
+const int N = 110, mod = 1e9 + 7;
 
- int main() {
-     int n;
-     cin >> n;
-     unordered_map<int, int> primes;
-     while (n--) {
-         int x;
-         cin >> x;
-         for (int i = 2; i <= x / i; i++) {
-             while (x % i == 0) {
-                 x /= i;
-                 primes[i]++;
-             }
-             if (x > 1) primes[x]++;
-         }
-     }
-     LL res = 1;
-     for (auto p : primes) res = res * (p.second + 1) % mod;
-     cout << res << endl;
-     return 0;
- }
+int main() {
+    int n;
+    cin >> n;
+    unordered_map<int, int> primes;
+    // 首先求出来因式分解之后的表达式中 所有的 底数和指数
+
+    while (n--) {
+        int x;
+        cin >> x;
+        
+        for (int i = 2; i <= x / i; i++) {
+            while (x % i == 0) {
+                x /= i;
+                primes[i]++; // i 这个质因数的质数加一
+            }
+        }
+        if (x > 1) primes[x]++;
+    }
+    
+    // 现在的 primes 中就存储了所有质因数的指数
+    LL ans = 1;
+    for (auto [k, v] : primes) ans = ans * (v + 1) % mod;
+    cout << ans << endl;
+    
+    return 0;
+}
 ```
