--- a/ACwing/算法基础课题单/数学知识/06约数之和.md
+++ b/ACwing/算法基础课题单/数学知识/06约数之和.md
@@ -1,6 +1,10 @@
 ![约数之和.png](https://cdn.acwing.com/media/article/image/2021/08/30/101476_54ab919409-约数之和.png) 
 
 
+约数之和：
+
+$(P_1^0 + P_1^1 + \cdots + P_1^{a1}) \cdots (P_K^0 + P_K^1 + \cdots + P_K^{ak})$
+
 ``` cpp 
 #include <iostream>
 #include <unordered_map>
