use wsl edit this project

--- a/Company/笔试面试辅导课/01第一讲/01蛇形矩阵.md
+++ b/Company/笔试面试辅导课/01第一讲/01蛇形矩阵.md
@@ -48,37 +48,37 @@ int mian() {
 
 ``` go
 package main
+
 import "fmt"
 
 func main() {
-    n, m := 0, 0
-    fmt.Scanf("%d %d", &n, &m)
-    
-    ans := make([][]int, n)
-    for i := 0; i < n; i++ {
-        ans[i] = make([]int, m)
-    }
-    
-    x, y, d := 0, 0, 0
-    dx := [4]int{0, 1, 0, -1}
-    dy := [4]int{1, 0, -1, 0}
-    
-    for i := 1; i <= n * m; i++ {
-        ans[x][y] = i
-        a, b := x + dx[d], y + dy[d]
-        
-        if a < 0 || a >= n || b < 0 || b >=m || ans[a][b] != 0 {
-            d = (d + 1) % 4
-            a, b = x + dx[d], y + dy[d]
-        }
-        x, y =a, b
-    }
-    
-    for i := 0; i < n; i++ {
-        for j := 0; j < m; j++ {
-            fmt.Printf("%d ", ans[i][j])
-        }
-        fmt.Printf("\n")
-    }
+	n, m := 0, 0
+	fmt.Scanf("%d %d", &n, &m)
+	g := make([][]int, n)
+	for i := 0; i < n; i++ {
+		g[i] = make([]int, m)
+	}
+
+	var dx = [...]{0, 1, 0, -1}
+	var dy = [...]{1, 0, -1, 0}
+
+	x, y, d := 0
+
+	for i := 1; i <= n * m; i++ {
+		g[x][y] = i
+		a, b := x + dx[d], y + dy[d]
+		if a < 0 || a >= n || b < 0 || b >= m {
+			d = (d + 1) % 4
+			a, b = x + dx[d], y + dy[d]
+		}
+		x, y = a, b
+	}
+
+	for i := 0; i < n; i++ {
+		for j := 0; j < m; j++ {
+			fmt.Printf("%d ", g[i][j])
+		}
+		fmt.Println()
+	}
 }
 ```
