--- a/Company/笔试面试辅导课/01第一讲/02单链表快速排序.md
+++ b/Company/笔试面试辅导课/01第一讲/02单链表快速排序.md
@@ -1,10 +1,25 @@
 [原题链接](https://www.acwing.com/problem/content/1453/)
 
-## 题目截图
+## 题目
 
-![20211026112940-2021-10-26-11-29-46](https://raw.githubusercontent.com/fengwei2002/Pictures_02/master/images/20211026112940-2021-10-26-11-29-46.png)
+给定一个单链表，请使用快速排序算法对其排序。
+
+要求：期望平均时间复杂度为 `O(nlogn)`，期望额外空间复杂度为 `O(logn)`。
+
+思考题： 如果只能改变链表结构，不能修改每个节点的val值该如何做呢？
+
+数据范围  
+链表中的所有数大小均在 int 范围内，链表长度在 `[0,10000]`。
+ 
+输入样例：  
+`[5, 3, 2]`  
+输出样例：  
+`[2, 3, 5]`   
+
 
 ## 思路
+
+交换内容的话，当内容变多的时候，交换的过程就会很慢，交换指针的话就不会很慢，在工程中也会存在实际的应用
 
 开辟三个新的不同的链表根节点，对于初始的 head 根节点，遍历 head 链表和 head->val 作比较，如果值小于放入左链表，等于放入中间链表，大于放在右链表
 
@@ -62,3 +77,7 @@ public:
     }
 };
 ```
+
+GO:
+
+``` 
