🌈 style: 剑指offer init

--- a/Company/笔试面试辅导课/01第一讲/02单链表快速排序.md
+++ b/Company/笔试面试辅导课/01第一讲/02单链表快速排序.md
@@ -21,13 +21,19 @@
 
 交换内容的话，当内容变多的时候，交换的过程就会很慢，交换指针的话就不会很慢，在工程中也会存在实际的应用
 
-开辟三个新的不同的链表根节点，对于初始的 head 根节点，遍历 head 链表和 head->val 作比较，如果值小于放入左链表，等于放入中间链表，大于放在右链表
+维护三个不同的链表
+- 小于当前 val 的值，连接到 left 的下一个中
+- 等于 val 的值，连接到 mid 的下一个中
+- 大于 val 的值，连接到 right 的下一个中
 
-递归执行左右链表的上述步骤排序
+开辟**三个**新的，不同的，**链表根节点**，对于初始的 head 根节点，  
+遍历 head 链表和 head->val 作比较，如果值小于放入左链表，等于放入中间链表，大于放在右链表
 
-拼接三个链表
+现在基础的划分步骤就完成了
 
-释放空间，返回答案
+- 递归对左右链表执行上述的划分步骤，
+- 把 left mid right 三个链表连接到一起
+- **释放空间**，返回答案
 
 
 ## 代码
@@ -44,40 +50,68 @@
  */
 class Solution {
 public:
-    ListNode* get_tail(ListNode* head) {
-        while (head->next) head = head->next;
-        return head;
-    }
-    
     ListNode* quickSortList(ListNode* head) {
         if (!head || !head->next) return head;
+        auto left = new ListNode(-1);
+        auto mid = new ListNode(-1);
+        auto right = new ListNode(-1);
         
-        auto left = new ListNode(-1), mid = new ListNode(-1), right = new ListNode(-1);
-        auto ltail = left, mtail = mid, rtail = right;
-        int val = head->val;
+        auto leftTail = left, midTail = mid, rightTail = right;
+        int value = head->val;
         
         for (auto p = head; p; p = p->next) {
-            if (p->val < val) ltail = ltail->next = p;
-            else if (p->val > val) rtail = rtail->next = p;
-            else mtail = mtail->next = p;
+            if (p->val < value) {
+                leftTail->next = p;
+                leftTail = leftTail->next;
+            } else if (p->val == value) {
+                midTail->next = p;
+                midTail = midTail->next;
+            } else {
+                rightTail->next = p;
+                rightTail = rightTail->next;
+            }
         }
+        leftTail->next = midTail->next = rightTail->next = NULL;
         
-        ltail->next = mtail->next = rtail->next = NULL;
+        
         left->next = quickSortList(left->next);
         right->next = quickSortList(right->next);
         
-        get_tail(left)->next = mid->next;
-        get_tail(left)->next = right->next;
-
+        getTail(left)->next = mid->next;
+        getTail(left)->next = right->next;
+        /*
         auto p = left->next;
         delete left;
         delete mid;
         delete right;
         return p;
+        */
+        return left->next;
+    }
+    
+    ListNode* getTail(ListNode* head) {
+        while (head->next) head = head->next;
+        return head;
     }
 };
 ```
 
-GO:
+快速排序
+- 时间复杂度： `O(nlogn)` （最坏 n2 但是几乎达不到所以不考虑）
+- 空间复杂度：`O(logn)`
 
-``` 
+归并排序：
+- 时间复杂度:  `O(nlogn)`
+- 空间复杂度：递归 O(logn) 迭代 O(1)
+
+堆排序：
+- 时间复杂度:  `O(nlogn)`
+- O(1) 但是不适用于链表
+
+
+
+迭代的方式实现归并排序：
+
+``` cpp
+
+```
