--- a/LeetCodeContest/2022-01-17-虚拟203.md
+++ b/LeetCodeContest/2022-01-17-虚拟203.md
@@ -265,7 +265,106 @@ https://leetcode-cn.com/problems/find-latest-group-of-size-m/
 lc 352 题
 
 
-``` cpp
+### 解题思路
 
+用两个链表维护每个点最左可以到达的位置和最右可以到达的位置
+
+### 代码
+
+```cpp
+class Solution {
+public:
+    vector<int> l, r;
+    int get(int x) {
+        return r[x] - x + 1;
+    }
+    int findLatestStep(vector<int>& arr, int m) {
+        int n = arr.size();
+        l.resize(n + 2, 0), r.resize(n + 2, 0);
+
+        int cnt = 0, ans = -1;
+        for (int i = 0; i < n; i++) {
+            int x = arr[i];
+            if (l[x - 1] > 0 && r[x + 1] > 0) {
+                if (get(l[x - 1]) == m) {
+                    cnt--;
+                }
+                if (get(x + 1) == m) {
+                    cnt--;
+                }
+                r[l[x - 1]] = r[x + 1];
+                l[r[x + 1]] = l[x - 1];
+                if (get(l[x - 1]) == m) {
+                    cnt++;
+                }
+            } else if (l[x - 1] > 0 && r[x + 1] == 0) {
+                if (get(l[x - 1]) == m) {
+                    cnt--;
+                }
+                r[l[x - 1]] = x, l[x] = l[x - 1];
+                if (get(l[x - 1]) == m) {
+                    cnt++;
+                }
+            } else if (l[x - 1] == 0 && r[x + 1] > 0) {
+                if (get(x + 1) == m) {
+                    cnt--;
+                }
+                l[r[x + 1]] = x;
+                r[x] = r[x + 1];
+                if (get(x) == m) cnt++;
+            } else {
+                l[x] = r[x] = x;
+                if (m == 1) {
+                    cnt++;
+                }
+            }
+            if (cnt) ans = i + 1;
+        }
+        return ans;
+    }
+
+};
 ```
 
+## TODO D 石子游戏 5
+
+[原题链接](https://leetcode-cn.com/problems/stone-game-v)  
+https://github.com/fengwei2002/algorithm  
+
+
+## 题目
+
+几块石子 排成一行 ，每块石子都有一个关联值，关联值为整数，由数组 stoneValue 给出。
+
+游戏中的每一轮：Alice 会将这行石子分成两个 非空行（即，左侧行和右侧行）；Bob 负责计算每一行的值，即此行中所有石子的值的总和。Bob 会丢弃值最大的行，Alice 的得分为剩下那行的值（每轮累加）。如果两行的值相等，Bob 让 Alice 决定丢弃哪一行。下一轮从剩下的那一行开始。
+
+只 剩下一块石子 时，游戏结束。Alice 的分数最初为 0 。
+
+返回 Alice 能够获得的最大分数 。
+
+
+``` cpp 
+示例 1：
+
+输入：stoneValue = [6,2,3,4,5,5]
+输出：18
+解释：在第一轮中，Alice 将行划分为 [6，2，3]，[4，5，5] 。左行的值是 11 ，右行的值是 14 。Bob 丢弃了右行，Alice 的分数现在是 11 。
+在第二轮中，Alice 将行分成 [6]，[2，3] 。这一次 Bob 扔掉了左行，Alice 的分数变成了 16（11 + 5）。
+最后一轮 Alice 只能将行分成 [2]，[3] 。Bob 扔掉右行，Alice 的分数现在是 18（16 + 2）。游戏结束，因为这行只剩下一块石头了。
+
+示例 2：
+
+输入：stoneValue = [7,7,7,7,7,7,7]
+输出：28
+```
+
+## 思路
+
+
+
+## 代码
+
+
+``` cpp 
+
+```
