添加回溯解法

--- a/LeetCodeContest/2022-01-23-277周赛-3.md
+++ b/LeetCodeContest/2022-01-23-277周赛-3.md
@@ -283,6 +283,65 @@ public:
 };
 ```
 
+
+不使用二进制状态压缩，使用递归回溯解决：
+
+- 采用递归回溯的方式按编号从小到大依次枚举每个人的身份。
+- 如果确定了第 i 个人的身份，则需要核实第 i 个人的身份是否与 0 到 i − 1 的人描述相符。
+
+``` cpp 
+class Solution {
+public:
+    int ans = 0;
+    vector<int> p;
+
+    bool check(int i, const vector<vector<int>>& st) {
+        // check 函数根据 i 和已知的陈述进行搜索
+        // 因为是从前向后进行的遍历，所以前面的状态是确定的 [0 ~ i]，只考虑前面就可以
+        for (int j = 0; j < i; j++) {
+            if (p[i] == 1 && st[i][j] != 2 && p[j] != st[i][j]) {
+                return false; 
+            } // 如果 i 是好人，并且 j 的身份和 i 的言论冲突， return false
+
+            if (p[j] == 1 && st[j][i] != 2 && p[i] != st[j][i]) {
+                return false;
+            } // 如果某种情况下 j 是好人，并且 i 是好人且和 j 的言论冲突， return false
+        }
+
+        return true;
+    }
+
+    void solve(int i, int n, int sum, const vector<vector<int>>& st) {
+        if (i == n) { // 如果某一种情况遍历到了最后一个人之后， 就使用好人的数量更新一次 ans 的值
+            ans = max(ans, sum);
+            return;
+        }
+
+        p[i] = 1; // 如果 p[i] 等于 1， 并且和已知的条件不冲突， 考虑下一个人， 好人的数量 sum + 1
+        if (check(i, st)) {
+            solve(i + 1, n, sum + 1, st);
+        }
+
+        p[i] = 0; // 如果 p[i] 等于 0， 并且和已知条件不冲突，考虑下一个人，好人的数量 sum 不变
+        if (check(i, st)) {
+            solve(i + 1, n, sum, st);
+        }
+
+        return;
+    }
+
+    int maximumGood(vector<vector<int>>& statements) {
+        const int n = statements.size();
+        p.resize(n);
+
+        solve(0, n, 0, statements);
+        // 从 0 到 n 枚举每个人的身份 sum 统计好人的数目
+
+        return ans;
+    }
+};
+```
+
 ### 反思
 
 如果坏人只说假话：
