笔试面试辅导课第一讲

--- a/Company/笔试面试辅导课/01第一讲/04鸡蛋的硬度.md
+++ b/Company/笔试面试辅导课/01第一讲/04鸡蛋的硬度.md
@@ -6,32 +6,47 @@
 
 ## 思路
 
-`f[i][j]` 表示现在有 j 个鸡蛋，i 层楼最坏情况所需要最少次数
 
-`f[i][j] = f[i - 1][j] + f[i - 1][j - 1] + 1`
+假设鸡蛋数无限，那么就可以二分出答案
+
+---
+
+状态表示 `f[i][j]`   
+集合： 所有测量区间长度是 i，且有 j 个鸡蛋的测量方案  
+属性：最坏情况下的最小值
+
+状态计算：
+
+![20220124113028-2022-01-24-11-30-33](https://raw.githubusercontent.com/fengwei2002/Pictures_02/master/images/20220124113028-2022-01-24-11-30-33.png)
 
 ## 代码
 
-
 ``` cpp 
+#include <algorithm>
 #include <iostream>
 using namespace std;
 
-int f[101][11], n, m;
-// n 层楼， m 个鸡蛋，最坏情况扔鸡蛋次数最少的策略
+const int N = 110, M = 11;
+
+int n ,m;
+int f[N][M];
 
 int main() {
-    f[0][0] = 0;
+    ios::sync_with_stdio(false);
+    cin.tie(0);
     while (cin >> n >> m) {
-        for (int i = 1; i <= n; i++) {
-            for (int j = 1; j <= m; j++) {
-                f[i][j] = f[i - 1][j] + f[i - 1][j - 1] + 1;
-            }
-            if (f[i][m] >= n) {
-                cout << i << endl;
-                break;
+        for (int i = 1; i <= n; i++) f[i][1] = i;
+        for (int i = 1; i <= m; i++) f[1][i] = 1;
+
+        for (int i = 2; i <= n; i++) {
+            for (int j = 2; j <= m; j++) {
+                f[i][j] = f[i][j - 1];
+                for (int k = 1; k <= i; k++) {
+                    f[i][j] = min(f[i][j], max(f[k - 1][j - 1], f[i - k][j]) + 1);
+                }
             }
         }
+        cout << f[n][m] << endl;
     }
     return 0;
 }
