--- a/Company/笔试面试辅导课/01第一讲/06链表中环的入口结点.md
+++ b/Company/笔试面试辅导课/01第一讲/06链表中环的入口结点.md
@@ -2,90 +2,88 @@
 
 [题目链接](https://www.acwing.com/problem/content/86/)
 
-首先判重的第一反应就是 哈希表，开一个哈希表，如果这个节点之前已经存在，那么就直接返回
+假设快慢指针相遇的地方是环中的 c 处，c 到 b 的距离为 y  
+因为快指针移动的距离是慢指针移动距离的两倍，    
+所以将慢指针从相遇点 c 移动到环的入口点 b 的时候，快指针移动到了从环的入口点向后的 c' 点    
+b 到 c' 的位置为 y     
+c 到 b 的距离为 y  
 
-``` cpp 
+因为快指和慢指针的心走距离是二倍的关系，所以从 b 点开始走 x 步的话，可以走到 c' 点   
+
+那么整个环的长度就是 y + x   
+
+快慢指针都到了相遇点 c  
+
+这时候只需要再让一个指针走回起点， 另一个指针从 c 点开始走，再次相遇的点就是环的入口  
+
+``` cpp
 class Solution {
-   public:
-    ListNode *entryNodeOfLoop(ListNode *head) {
-        if (head == nullptr) return head;
-
-        unordered_map<ListNode*, int> hash;
-        auto p = head;
-        
-        while (p) {
-            if (hash[p]) {
-                return p;
+public:
+    ListNode *detectCycle(ListNode *head) {
+        if (!head || !head->next) return nullptr;
+        auto s = head, f = head;
+        while (s && f) {
+            if (s->next && f->next) {
+                s = s->next, f = f->next;
+                if (f->next) {
+                    f = f->next;
+                } else {
+                    return nullptr;
+                }
+            } else {
+                return nullptr;
             }
-            hash[p] = 1;
-            p = p->next;
+            // s = s->next, f = f->next;
+            // f = f->next; 多加的 if 是为了判断空指针的情况，使用可能为空的指针之前要进行判断
+
+            if (s == f) {
+                s = head; 
+                while (s != f) s = s->next, f = f->next;
+                return s;
+            }
         }
-        
         return nullptr;
     }
 };
 ```
 
-## 不使用哈希表的写法：
-
-用快慢指针记录周长，
-
-- 定义一快一慢两个指针。慢指针一次走一步，快指针一次走两步。两个指针同时向前走，如果两个指针能相遇，则环存在。如果快指针走到下一个节点是 null，则环不存在。
-- 两个指针能相遇，相遇地点一定是在环里。此时，一个指针停下来，另一个指针每次向前走一步，再次相遇时，走过的长度就是环的周长。
-- 两个指针同时指向起点，一个指针先向前移动环的周长，然后两个指针同时每次向前移动一步，再次相遇时，就是环的入口。
+GO
 
 
-``` cpp
+``` go
 /**
  * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
+ * type ListNode struct {
+ *     Val int
+ *     Next *ListNode
+ * }
  */
-class Solution {
-public:
-    ListNode *entryNodeOfLoop(ListNode *head) {
-        if (head == nullptr || head->next == nullptr) return nullptr;
-        
-        auto fast = head;
-        auto slow = head;
-        int circleGirth = 0;
-        
-        while (fast->next && fast->next->next) {
-            fast = fast->next->next;
-            slow = slow->next;
-            
-            if (fast == slow) {
-                // 记录环的周长
-                slow = slow->next;
-                circleGirth++;
-                while (fast != slow) {
-                    slow = slow->next;
-                    circleGirth++;
-                }
-                
-                // 将快慢指针都移动到头节点
-                fast = slow = head;
-                
-                // 将快指针向后移动周长步
-                for (int i = 0; i < circleGirth; i++) {
-                    fast = fast->next;
-                }
-                
-                // 快慢指针的步长都变为 1, 不相等的话，就依次后移
-                // 直到下一次快慢指针相等，退出循环
-                while (fast != slow) {
-                    fast = fast->next;
-                    slow = slow->next;
-                }
-                
-                return fast;
+func detectCycle(head *ListNode) *ListNode {
+    s := head
+    f := head
+    for s != nil && f != nil {
+        if s.Next != nil && f.Next != nil {
+            s = s.Next
+            f = f.Next;
+            if f.Next != nil {
+                f = f.Next
+            } else {
+                return nil
             }
+        } else {
+            return nil
         }
         
-        return nullptr;
+        if s == f {
+            s = head
+            for s != f {
+                s = s.Next
+                f = f.Next
+            }
+            return s
+        }
     }
-};
+
+    return nil
+}
 ```
