--- a/Company/剑指offer/005剑指-Offer-05.替换空格.md
+++ b/Company/剑指offer/005剑指-Offer-05.替换空格.md
@@ -44,20 +44,18 @@ func replaceSpace(s string) string {
 }
 ```
 
-如果面试官说我不想要 $O(n)$ 的空间， 那么就使用这种双指针写法
+如果面试官说我不想要额外 `O(n)` 的空间， 只想要扩充的数据部分的空间， 
+
+那么就使用这种双指针写法
 (双指针扫描)
 
 - 首先遍历一遍原数组，求出最终答案的长度 $length$；
 - 将原数组 resize 成 length 大小；
 - 使用两个指针，**指针 i 指向原字符串的末尾，指针 j 指向 length 的位置**；
 - 两个指针分别从后往前遍历，如果 `str[i] == ' '`，则指针 j 的位置上依次填充`'0', '2', '%'`，这样倒着看就是 `"%20"`；如果 `str[i] != ' '`，则指针 j 的位置上填充该字符即可。
-- 由于 i 之前的字符串，在变换之后，长度一定不小于原字符串，所以遍历过程中一定有 `i <= j`，这样可以保证 `str[j]` 不会覆盖还未遍历过的 `str[i]`，从而答案是正确的。
+- 遍历过程中一定有 `i <= j`，这样可以保证 `str[j]` 不会覆盖还未遍历过的 `str[i]`，从而答案是正确的。
 
-空间是 $n \to 3*n = O(n)$   
-时间是 $O(n)$
-
-
-``` cpp 
+```cpp [] 
 class Solution {
    public:
     string replaceSpaces(string &str) {
@@ -75,21 +73,21 @@ class Solution {
 
         while (i >= 0) {
             if (str[i] == ' ') {
-                str[j--] = '0';
-                str[j--] = '2';
-                str[j--] = '%';
+                str[j] = '0';
+                str[j - 1] = '2';
+                str[j - 2] = '%';
+                j -= 3;
             } else{
-                str[j--] = str[i];
-            } 
+                str[j] = str[i];
+                j--;
+            }
             i--;
         }
         return str;
     }
 };
 ```
-
-
-``` go 
+```go [] 
 func replaceSpace(s string) string {
     b := []byte(s)
     length := len(b)
@@ -99,7 +97,7 @@ func replaceSpace(s string) string {
         if value == ' ' {
             spaceCount++
         }
-    } // 计算空格的数量
+    }
 
     appendSize := spaceCount * 2
     tmp := make([]byte, appendSize)
