--- a/Company/笔试面试辅导课/02第二讲/01反转链表.md
+++ b/Company/笔试面试辅导课/02第二讲/01反转链表.md
@@ -26,20 +26,24 @@
 class Solution {
 public:
     ListNode* reverseList(ListNode* head) {
-        auto a = nullptr; 
-        auto b = head; 
-
+        ListNode* a = head;
+        ListNode* b = a->next;
+        
         while (b) {
             auto c = b->next;
             b->next = a;
             a = b, b = c;
         }
+
+        head->next = NULL;
         return a;
     }
 };
 ```
 
-TODO 反转链表的递归解法
+反转链表的递归解法
+
+![20220124141130-2022-01-24-14-11-33](https://raw.githubusercontent.com/fengwei2002/Pictures_02/master/images/20220124141130-2022-01-24-14-11-33.png)
 
 ``` cpp 
 class Solution {
